--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 .box-container{
     width: 800px;
     height: 800px;
-    background-color: bisque;
+    background-color: rgb(176, 255, 166);
     margin-top: 50px;
     margin: 0 auto;
     display: flex;
@@ -22,6 +22,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: bolder;
 }
 .bg{
     background-color: rgb(144, 154, 243);
